<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">"Fit Meet "</string>
    <string name="title_activity_calendar">Calendar</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_plan">Plan</string>
    <string name="title_activity_facilities">Facilities</string>
    <string name="title_activity_friends">Friends</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_main">Main</string>
    <string name="action_add_event">Add event</string>
    <string name="action_add_friends">Add friends</string>
    <string name="action_search">Search</string>
    <string name="frag_facilities">facilities</string>
    <string name="frag_plan">Plan</string>
    <string name="settings_click_faq">FAQ</string>
    <string name="setting_click_profile">Profile</string>
    <string name="settings_click_about">About</string>
    <string name="settings_button_logout">Logout</string>
    <string name="title_activity_create_event">Create Event</string>
    <string name="event_title">Enter Title</string>
    <string name="event_location">Enter Location</string>
    <string name="event_friends">Add Friends</string>
    <string name="event_start_date">Start Date</string>
    <string name="event_start_time">Start Time</string>
    <string name="event_end_time">End Time</string>
    <string name="event_end_date">End Date</string>
    <string name="event_reminder_me">Remind Me</string>
    <string name="event_reminder_friends">Remind Friend(s)</string>
    <string name="event_add_note">Add Note</string>
    <string name="event_add_event">Add Event</string>
    <string name="title_activity_add_friends">Add Friends</string>
    <string name="add_friends_search">Enter Friends ID or Profile Name</string>
    <string name="title_activity_login">Login</string>
    <string name="splash_title">fitMeet by 3plus1G - ®2013 A SMU IS306 Project</string>
    <string name="image_logo_description">Fit Meet</string>
    <string name="activity_login_username">Username</string>
    <string name="activity_login_password">Password</string>
    <string name="button_login">Login</string>
    <string name="activity_login_forget_password">Forget password?</string>
    <string name="activity_login_register">Register Now</string>
    <string name="sports_symbols_link">http://www.clker.com/clipart-sports-symbols.html</string>
    <string name="title_activity_register">Registration</string>
    <string name="activity_register_username">*Username</string>
    <string name="activity_register_password">*Password</string>
    <string name="activity_register_confirm_password">*Confirm Password</string>
    <string name="activity_register_profile_name">*Profile Name</string>
    <string name="activity_register_gender">Gender :*</string>
    <string name="activity_registration_gender_female">Female</string>
    <string name="activity_registration_gender_male">Male</string>
    <string name="activity_register_dob">Date of Birth :*</string>
    <string name="activity_register_hobbies">*Hobbies</string>
    <string name="activity_register_button">Register</string>
    <string name="title_activity_faq">FAQ</string>
    <string name="title_activity_about">About</string>
    <string name="about_title">About</string>
    <string name="about_info">"\"Where got time?\",\"Nobody to play with?\". In today's hectic lifestyle, we do not have the luxury to constantly plan for our exercise life. Therefore meet fitMeet, the new way keep your life( and your figure) in the right shape. fitMeet is design to help you schedule and find friends to exercise with you.    "</string>
    <string name="facilities_type">Facilities Type</string>
    <string name="facilities_locations">Location</string>
    <string name="facilities_sch_cc">School / Community Centres</string>
    <string name="facilities_date">Date :</string>
    <string name="event_create_from">From :</string>
    <string name="event_create_to">To :</string>

    <string-array name="facilities">
        <item>Basketball Court</item>
        <item>Tennis Court</item>
        <item>Badminton Court</item>
        <item>Squash Court</item>
        <item>Futsal Field</item>
        <item>Table Tennis Court</item>
        <item>Netball Court</item>
        <item>Floorball Court</item>
        <item>Volleyball Court</item>
        <item>Hockey Field</item>
        <item>Tchouk Ball Court</item>
    </string-array>
    <string-array name="recommended_friends">
        <item>Ah Seng</item>
        <item>Ah Lian</item>
        <item>Ah Huay</item>
        <item>Roger</item>
        <item>Lionel</item>
        <item>Valentino</item>
        <item>Mark</item>
        <item>Rooney</item>
        <item>Ah Meng</item>
        <item>Rafael</item>
        <item>Andy</item>
    </string-array>
    <string-array name="location">
        <item>Bedok Sports Hall</item>
        <item>Bishan Sports Hall</item>
        <item>Bukit Gombak Sports Hall</item>
        <item>CCAB (Co-Curricular Activities Branch, MOE) Sports Hall</item>
        <item>Clementi Sports Hall</item>
        <item>Choa Chu Kang Sports Hall</item>
        <item>Delta Sports Hall</item>
        <item>Hougang Sports Hall</item>
        <item>Jurong East Sports Hall</item>
        <item>Jurong West Sports Hall</item>
        <item>Yio Chu Kang Sports Hall</item>
        <item>Yishun Sports Hall</item>
    </string-array>

    <string name="title_activity_profile">Profile</string>
    <string name="facilities_date_button"></string>
    <string name="profile_name_title">Name : </string>
    <string name="profile_gender_title">Gender :</string>
    <string name="profile_age_title">Age :</string>
    <string name="profile_hobbies_title">Hobbies :</string>
    <string name="profile_name">Alex Lin</string>
    <string name="profile_age">27</string>
    <string name="profile_gender">Male</string>
    <string name="profile_hobbies">Basketball, Running</string>
    <string name="profile_hobbies_hint">e.g Basketball, Tennis, Golf, Running</string>
    <string name="profile_update_button">Update Profile</string>
    <string name="recommended_friends">Recommended Friend(s)</string>
    <string name="search_friends_results">Search Result(s)</string>
    <string name="date_event">"Date : "</string>
    <string name="event_date_value">Date</string>
    <string name="title_activity_friend_profile">Friend Profile</string>
    <string name="button_friends_create_event">Create Event</string>
    <string name="create_event_location_title">Location</string>
    <string name="search_input_friends">Search for added friends</string>
    <string name="empty"></string>
    <string name="no_friends">You currently have no friends.</string>
    <string name="add_some_friends">Add some friends now!</string>
    <string name="title_activity_facilities_search">Facilities Search</string>
    <string name="facilities_search_type">"Facility Type : "</string>
    <string name="facilities_search_location_title">"Location : "</string>
    <string name="facilities_search_location_value">"Hougang Sports Hall "</string>
    <string name="facilities_search_type_value">Basketball Court</string>
    <string name="facilities_search_date_title">"Date : "</string>
    <string name="facilities_search_date_value">30/11/2013</string>
    <string name="facilities_search_contact_information">Contact SSC to book facility @ 61234567.</string>
    <string name="facilities_search_table_time">Time</string>
    <string name="facilities_search_table_availability">Availability</string>
    <string name="title_activity_event">Event</string>
    <string name="event_view_title">"Title : "</string>
    <string name="event_view_location">"Location : "</string>
    <string name="event_view_friends">"Friend(s) : "</string>
    <string name="event_view_date">"Date : "</string>
    <string name="event_view_from">"From : "</string>
    <string name="event_view_to">to</string>
    <string name="event_view_remind_me">Remind Me :</string>
    <string name="event_view_remind_friends">"Remind Friends : "</string>
    <string name="event_view_notes">"Notes : "</string>
    <string name="event_view_notes_title">"Notes : "</string>
    <string name="title_activity_add_friend_profile">Profile</string>
    <string name="button_add_as_friends">Add as friend</string>
    <string name="title_activity_search_friend">Search Friends</string>
    <string name="search_hint">Search for Friends (username / name)</string>
    <string name="search_results_title">Search Result(s)</string>
    <string name="img_event">Event Style</string>
    <string name="space">" , "</string>

</resources>
