<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegisterActivity" >

    <EditText
        android:id="@+id/register_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/activity_register_username" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/activity_register_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/register_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/activity_register_confirm_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/register_profile_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:paddingTop="20dp"
        android:hint="@string/activity_register_profile_name"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/register_gender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:text="@string/activity_register_gender"
            android:textAppearance="?android:attr/textAppearanceMedium" />

		<RadioGroup
		    android:id="@+id/radio_gender"
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:orientation="horizontal" >

		    <RadioButton
		        android:id="@+id/gender_female"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/activity_registration_gender_female" />

		    <RadioButton
		        android:id="@+id/gender_male"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:text="@string/activity_registration_gender_male" />
		</RadioGroup>
        
    </LinearLayout>

    <EditText
        android:id="@+id/register_dob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:paddingTop="10dp"
        android:hint="@string/activity_register_dob"
        android:inputType="date" />

    <EditText
        android:id="@+id/register_hobbies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/activity_register_hobbies"
        android:inputType="textMultiLine"
        android:paddingTop="30dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button_submit_registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/activity_register_button"
            android:onClick="processRegistration" />

    </RelativeLayout>

</LinearLayout>
