<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".FacilitiesFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/facilities_type_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/facilities_type"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/facilities_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/facilities_type" />

        <TextView
            android:id="@+id/facilities_location_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/facilities_locations"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <Spinner
            android:id="@+id/facilities_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/facilities_locations" />

        <TextView
            android:id="@+id/facilities_sch_cc_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/facilities_sch_cc"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <Spinner
            android:id="@+id/facilities_sch_cc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/facilities_sch_cc" />

        <EditText
            android:id="@+id/facilities_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/facilities_date"
            android:inputType="date" >

            <requestFocus />
        </EditText>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/facilities_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="@string/action_search" />

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
